Finish implementation of Events API: Create, Get, List
