# api/v1/docs/swagger.json
@@ -33,7 +33,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/model.Event"
+                                "$ref": "#/definitions/models.Event"
                             }
                         }
                     }
@@ -56,7 +56,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/model.Event"
+                            "$ref": "#/definitions/models.Event"
                         }
                     }
                 ],
@@ -64,7 +64,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/model.Event"
+                            "$ref": "#/definitions/models.Event"
                         }
                     }
                 }
@@ -94,7 +94,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/model.Event"
+                            "$ref": "#/definitions/models.Event"
                         }
                     }
                 }
@@ -102,14 +102,25 @@
         }
     },
     "definitions": {
-        "model.Event": {
+        "models.Event": {
             "type": "object",
             "properties": {
+                "created_at": {
+                    "type": "string",
+                    "example": "2020-04-21T00:00:00Z"
+                },
                 "id": {
                     "type": "integer"
                 },
+                "image_url": {
+                    "type": "string"
+                },
                 "title": {
                     "type": "string"
+                },
+                "updated_at": {
+                    "type": "string",
+                    "example": "2020-04-21T00:00:00Z"
                 }
             }
         }
