# model/events.go
@@ -1,8 +1,0 @@
-package model
-
-// Event model.
-type Event struct {
-	ID       int64  `json:"id"`
-	Title    string `json:"title"`
-	ImageURL string `json:"image_url"`
-}
